2010-08-10  Robert Larice
 * src/frontend/spiceif.c ,
 * src/spicelib/analysis/acan.c ,
 * src/spicelib/analysis/cktnoise.c ,
 * src/spicelib/analysis/dctran.c ,
 * src/spicelib/analysis/dctrcurv.c ,
 * src/spicelib/analysis/distoan.c ,
 * src/spicelib/analysis/noisean.c ,
 * src/spicelib/analysis/pzan.c ,
 * src/spicelib/analysis/tfanal.c ,
 * src/spicelib/devices/bjt/bjtnoise.c ,
 * src/spicelib/devices/bjt2/bjt2noise.c ,
 * src/spicelib/devices/bsim1/b1noi.c ,
 * src/spicelib/devices/bsim2/b2noi.c ,
 * src/spicelib/devices/bsim3/b3noi.c ,
 * src/spicelib/devices/bsim3soi/b4soinoi.c ,
 * src/spicelib/devices/bsim3soi_dd/b3soiddnoi.c ,
 * src/spicelib/devices/bsim3soi_fd/b3soifdnoi.c ,
 * src/spicelib/devices/bsim3soi_pd/b3soipdnoi.c ,
 * src/spicelib/devices/bsim3v0/b3v0noi.c ,
 * src/spicelib/devices/bsim3v1/b3v1noi.c ,
 * src/spicelib/devices/bsim3v1a/b3v1anoi.c ,
 * src/spicelib/devices/bsim3v1s/b3v1snoi.c ,
 * src/spicelib/devices/bsim3v32/b3v32noi.c ,
 * src/spicelib/devices/bsim4/b4noi.c ,
 * src/spicelib/devices/bsim4v2/b4v2noi.c ,
 * src/spicelib/devices/bsim4v3/b4v3noi.c ,
 * src/spicelib/devices/bsim4v4/b4v4noi.c ,
 * src/spicelib/devices/bsim4v5/b4v5noi.c ,
 * src/spicelib/devices/csw/cswnoise.c ,
 * src/spicelib/devices/dio/dionoise.c ,
 * src/spicelib/devices/hisim/hsm1noi.c ,
 * src/spicelib/devices/jfet/jfetnoi.c ,
 * src/spicelib/devices/jfet2/jfet2noi.c ,
 * src/spicelib/devices/mes/mesnoise.c ,
 * src/spicelib/devices/mos1/mos1noi.c ,
 * src/spicelib/devices/mos2/mos2noi.c ,
 * src/spicelib/devices/mos3/mos3noi.c ,
 * src/spicelib/devices/mos9/mos9noi.c ,
 * src/spicelib/devices/res/resnoise.c ,
 * src/spicelib/devices/soi3/soi3nois.c ,
 * src/spicelib/devices/sw/swnoise.c ,
 * src/spicelib/devices/urc/urcsetup.c ,
 * src/spicelib/devices/vbic/vbicnoise.c ,
 * src/spicelib/parser/inp2b.c ,
 * src/spicelib/parser/inp2c.c ,
 * src/spicelib/parser/inp2d.c ,
 * src/spicelib/parser/inp2e.c ,
 * src/spicelib/parser/inp2f.c ,